--- a/src/libs/i18n/locales/uz_cyrl.json
+++ b/src/libs/i18n/locales/uz_cyrl.json
@@ -587,7 +587,7 @@
   "WantYesStatus": "Ҳақиқатдан ҳам актив қилишни хоҳлайсизми ?",
   "Universities": "Университет маълумотлари",
   "name": "номи",
-  "EditUniversities": "Маълумотларни киритиш",
+  "EditUniversities": "Маълумотларни таҳрирлаш",
   "uniInfo": "Университет ҳақида",
   "avgContractSum": "Тўлов-контрактнинг ўртача миқдори",
   "minContractSum": "Тўлов-контрактнинг енг кам миқдори",
@@ -640,5 +640,6 @@
   "type": "Шартнома тури",
   "ContractApplications" :"Контракт аризалари",
   "EditTemplate" :"Шаблон таҳрирлаш",
-  "ContractType" :"Шартнома тури"
+  "ContractType" :"Шартнома тури",
+  "OtmUser": "Фойдаланувчи"
 }
