--- a/src/libs/i18n/locales/uz_latn.json
+++ b/src/libs/i18n/locales/uz_latn.json
@@ -611,7 +611,7 @@
   "documentDate": "Hujjat sanasi",
   "documentNumber": "Hujjat raqami",
   "academicYear": "O'quv yili",
-  "EditContractschedule": "To'lov-kontrakt ma'lumotlarini kiritish",
+  "EditContractschedule": "To'lov-kontrakt tahrirlash",
   "Clone": "Shakillantirish",
   "checkingAccount": "Hisob raqamini tanlash",
   "Application": "Qabul arizalari",
