--- a/src/libs/i18n/locales/uz_cyrl.json
+++ b/src/libs/i18n/locales/uz_cyrl.json
@@ -642,5 +642,6 @@
   "EditTemplate" :"Шаблон таҳрирлаш",
   "ContractType" :"Шартнома тури",
   "OtmUser": "Фойдаланувчи",
-  "EditContractschedule": "Тўлов-контракт таҳрирлаш"
+  "EditContractschedule": "Тўлов-контракт таҳрирлаш",
+  "district" :"Вилоят"
 }
