--- a/src/libs/i18n/locales/ru.json
+++ b/src/libs/i18n/locales/ru.json
@@ -670,5 +670,6 @@
   "EditTemplate": "Редактирование шаблонов",
   "ContractType": "Тип контракта",
   "OtmUser": "Пользователь",  
-  "EditContractschedule": "Редактировать платежный договор"
+  "EditContractschedule": "Редактировать платежный договор",
+  "district": "Область"
 }
